--- a/network/config.json
+++ b/network/config.json
@@ -19,7 +19,7 @@
   },
   "features": {
     "search": true,
-    "groupSelectorAttribute": false,
+    "groupSelectorAttribute": "section",
     "hoverBehavior": "default"
   },
   "informationPanel": {
@@ -28,9 +28,9 @@
   },
   "sigma": {
     "graphProperties": {
-      "minEdgeSize": 0.2,
-      "maxNodeSize": 7,
-      "maxEdgeSize": 0.5,
+      "minEdgeSize": 1,
+      "maxNodeSize": 15,
+      "maxEdgeSize": 20,
       "minNodeSize": 1
     },
     "drawingProperties": {
